2021-07-02 James D. Trotter <james@simula.no>

	Add the function `mtx_matrix_size_per_row' to count the number of
	entries stored in each row of a matrix.

	Add the function `mtx_set_comment_lines' to reduce code
	duplication related to allocating storage for and copying comment
	lines to a Matrix Market object.

	Consistently set `num_columns' to -1 for vectors.

2021-06-30 James D. Trotter <james@simula.no>

	Allow specifying a format string for outputting numerical values
	for Matrix Market objects.

	Fix various issues with installation and distribution.

	Rename `mtx_read' to `mtx_fread' and `mtx_write' to `mtx_fwrite'.
	Also, add new functions `mtx_read' and `mtx_write' to read .mtx
	files from a given path.

2021-06-18 James D. Trotter <james@simula.no>

        Initial version.

Copyright (C) 2021 James D. Trotter
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.