@@ -7,7 +7,8 @@
 	duplication related to allocating storage for and copying comment
 	lines to a Matrix Market object.
 
-	Consistently set `num_columns' to -1 for vectors.
+	Consistently set `num_columns' to -1 for vectors, and also set
+	`nonzero_size'.
 
 2021-06-30 James D. Trotter <james@simula.no>
 
